testsuite/tests/builtins/stream_methods/all/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(s.all())
   │       ───┬───  
   │          ╰───── Missing value for the "predicate" parameter
───╯
